# opsk-gx

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: .gitignore  Cargo.toml
backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
backend/src/handlers/: account_access.rs  alerts.rs  approval.rs  argocd_webhook.rs  auth.rs  channel.rs  chat.rs  cloud_account.rs  cluster.rs  dashboard.rs  entra_group_mapping.rs  entra_id_connection.rs  glossary.rs  health.rs  issue.rs  jira.rs  knowledge.rs  mcp.rs  mcp_rca.rs  mcp_rollout.rs  mod.rs  notification.rs  oauth.rs  pipeline.rs  provider.rs  resource.rs  rollout.rs  scheduled_job.rs  skill.rs  telemetry.rs  tenant.rs  topology.rs  user.rs
backend/src/middleware/: auth.rs  cors.rs  security.rs
backend/src/migrations/: 20240101000001_initial.sql  20240102000001_batch2.sql  20240103000001_batch3.sql  20240104000001_skills_v2.sql  20240105000001_cleanup_skills.sql  20240106000001_visibility.sql  20240107000001_cloud_accounts_v2.sql  20240108000001_account_access.sql  20240108000002_glossary_unique_term.sql  20240110000001_multi_model.sql  20240111000001_discovery_fixes.sql  20240112000001_findings.sql  20240113000001_mcp_transport.sql  20240114000001_issue_type.sql  20240115000001_mcp_tools.sql  20240120000001_oauth_tables.sql  20240121000001_builtin_mcp_rollouts.sql  20240122000001_fix_cluster_upsert_null_tenant.sql  20240123000001_job_runs.sql  20240124000001_add_missing_unique_constraints.sql  (+20 more)
backend/tests/: service_account_access_test.rs  service_alerts_test.rs  service_approval_test.rs  service_channel_test.rs  service_cloud_account_test.rs  service_cluster_test.rs  service_dashboard_test.rs  service_glossary_test.rs  service_knowledge_test.rs  service_pipeline_test.rs  service_provider_test.rs  service_rollout_test.rs  service_scheduled_job_test.rs  service_skill_test.rs  service_telemetry_test.rs  service_tenant_test.rs  service_user_test.rs
frontend/: app.vue  (+5 more)
(+216 files in other folders)
